works better in firefox

--- a/dynamic_example.html
+++ b/dynamic_example.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <title>Benjamin Golder - Grasshopper Polyline SVG Export Example</title>
         <style type="text/css">
+            #container {
+                width: 1000px;
+                height: 700px;
+            }
             path:hover {
                 stroke: #FF0073 !important;
                 stroke-width: 2px !important;
@@ -11,7 +15,7 @@
         </style>
     </head>
     <body>
-
+        <div id="container">
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
 <path stroke-width="1px" stroke="#506162" d="M 362.740206310 326.884237304 L 363.449159516 326.067615454 L 364.954629918 325.534386074 L 365.495899886 327.222215945 L 364.603183660 328.353031156 L 362.962726576 328.308127438 L 362.740206310 326.884237304" fill="none" />
 <path stroke-width="1px" stroke="#506162" d="M 372.858890042 273.880535002 L 377.653740533 272.999086869 L 373.404609891 274.624498175 L 372.761844726 274.859333354 L 371.668044533 275.513917937" fill="none" />
@@ -631,6 +635,7 @@
 <path stroke-width="1px" stroke="#00A5B3" d="M 744.229166384 557.887448556 L 735.640110982 578.130851010 L 746.453829353 560.608631437 L 747.937953383 559.991764197 L 749.703503167 557.806893274 L 746.498015616 557.737404979 L 744.229166384 557.887448556" fill="none" />
 <path stroke-width="1px" stroke="#00A5B3" d="M 940.534731104 250.406093630 L 940.009311525 250.579550570 L 939.985810060 251.459834871" fill="none" />
 </svg>
+</div>
     </body>
 </html>
 
